modules/dev-machine/k8s/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: dev-infra
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: prometheus
      protocol: TCP
      port: 15692
      targetPort: 15692
  type: ClusterIP
